cited source in comments

--- a/panda.html
+++ b/panda.html
@@ -1,3 +1,4 @@
+<!--This code was pulled from: https://bootcampspot.instructure.com/courses/5312/pages/3-dot-1-4-describe-the-body-of-an-html-document?module_item_id=1105866-->
 <!DOCTYPE html>
   <html lang="en">
     <head>
