--- a/panda.html
+++ b/panda.html
@@ -3,24 +3,32 @@
   <html lang="en">
     <head>
       <meta charset="UTF-8" />
-
       <title>Panda Fan Site!</title>
     </head>
 
     <body>
-      Panda Fan Site!
+      <h1>Panda Fan Site!</h1>
 
-      I LOVE PANDAS!!! I LOVE PANDAS!!! I LOVE PANDAS!!! I LOVE
-      PANDAS!!! I LOVE PANDAS!!!
+      <p>
+        I LOVE PANDAS!!! I LOVE PANDAS!!! I LOVE PANDAS!!! I LOVE PANDAS!!! I LOVE
+        PANDAS!!!
+      </p>
 
-      Reasons I like Pandas
+      <h2>Reasons I like Pandas</h2>
 
-      They are fuzzy
-      They are cute
-      They are adorable
+      <ul>
+        <li>They are fuzzy</li>
+        <li>They are cute</li>
+        <li>They are adorable</li>
+      </ul>
 
-      https://static.fullstack-bootcamp.com/prework/module-03/lesson-01/cute-pandas-02.jpg
-
-      More About Giant Pandas
+      <img
+        src="https://static.fullstack-bootcamp.com/prework/module-03/lesson-01/cute-pandas-02.jpg"
+        alt="Cute Pandas"
+        width="520"
+        height="346"
+      />
+      <br />
+      <a href="https://nationalzoo.si.edu/animals/giant-panda">More About Giant Pandas</a>
     </body>
   </html>
