--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section> HTML </section>
+      <section> CSS </section>
+      <section> GIT </section>
+      <section> JavaScript </section>
     </main>
 
     <footer>
