added sections and HTML bullets

--- a/index.html
+++ b/index.html
@@ -12,10 +12,45 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <section> HTML </section>
-      <section> CSS </section>
-      <section> GIT </section>
-      <section> JavaScript </section>
+      <section> class="card" id="html-section"
+        <h2>HTML</h2>
+        <ul>
+          <li> The head element contains information about the webpage.</li>
+          <li> The body element represents the visible content shown to the user.</li>
+          <li> HTML provides structure to a webpage.</li>
+          <li> HTML enables and provides standards for many types of web browsers.</li>
+        </ul>
+      </section>
+
+      <section> class="card" id="css-section"         
+        <h2>CSS</h2>
+        <ul>
+          <li> Enter your CSS notes here</li>
+          <li> Enter your CSS notes here</li>
+          <li> Enter your CSS notes here</li>
+          <li> Enter your CSS notes here</li>
+        </ul>
+      </section>
+
+      <section> class="card" id="git-section" 
+        <h2>GIT</h2>
+        <ul>
+          <li> Enter your GIT notes here</li>
+          <li> Enter your GIT notes here</li>
+          <li> Enter your GIT notes here</li>
+          <li> Enter your GIT notes here</li>
+        </ul>
+      </section>
+
+      <section> class="card" id="javascript-section"
+        <h2>JavaScript</h2>
+        <u1>
+          <li> Enter your JavaScript notes here</li>
+          <li> Enter your JavaScript notes here</li>
+          <li> Enter your JavaScript notes here</li>
+          <li> Enter your JavaScript notes here</li>
+        </u1>
+      </section>
     </main>
 
     <footer>
