added git notes

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       <section> class="card" id="git-section" 
         <h2>GIT</h2>
         <ul>
-          <li> Enter your GIT notes here</li>
-          <li> Enter your GIT notes here</li>
-          <li> Enter your GIT notes here</li>
-          <li> Enter your GIT notes here</li>
+          <li> git status: checks what branch we are currently on</li>
+          <li> git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li> GitHub and GitBash are useful, but they confuse me a little.</li>
+          <li> GitHub works well with VSCode.</li>
         </ul>
       </section>
 
