--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <section> class="card" id="html-section"
+      <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
           <li> The head element contains information about the webpage.</li>
@@ -22,7 +22,7 @@
         </ul>
       </section>
 
-      <section> class="card" id="css-section"         
+      <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
           <li> Enter your CSS notes here</li>
@@ -32,7 +32,7 @@
         </ul>
       </section>
 
-      <section> class="card" id="git-section" 
+      <section class="card" id="git-section">
         <h2>GIT</h2>
         <ul>
           <li> git status: checks what branch we are currently on</li>
@@ -42,7 +42,7 @@
         </ul>
       </section>
 
-      <section> class="card" id="javascript-section"
+      <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <u1>
           <li> Enter your JavaScript notes here</li>
