--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li> The body element represents the visible content shown to the user.</li>
           <li> HTML provides structure to a webpage.</li>
           <li> HTML enables and provides standards for many types of web browsers.</li>
-          <li> with HTML you can create static or dynamic web pages.</li>
+          <li> With HTML you can create static or dynamic web pages.</li>
         </ul>
       </section>
 
