--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <li> git checkout -b branch-name: creates a new branch and switches to it</li>
           <li> GitHub and GitBash are useful, but they confuse me a little.</li>
           <li> GitHub works well with VSCode.</li>
+          <li> Git hub is lit!!!</li>
         </ul>
       </section>
 
