--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li> Enter your CSS notes here</li>
-          <li> Enter your CSS notes here</li>
-          <li> Enter your CSS notes here</li>
+          <li> We use CSS, which is a programming language used by developers, to define how webpage content is presented to users.</li>
+          <li> CSS defines the colors, aesthetics, visual layout, and organization.</li>
+          <li> We use CSS to define style rules for specific elements of an HTML page and format them using a wide range of style options.</li>
           <li> Enter your CSS notes here</li>
         </ul>
       </section>
