added comments to CSS section

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
+          <li> CSS allows you to make individual or broad changes to colors and style.</li>
           <li> We use CSS, which is a programming language used by developers, to define how webpage content is presented to users.</li>
           <li> CSS defines the colors, aesthetics, visual layout, and organization.</li>
           <li> We use CSS to define style rules for specific elements of an HTML page and format them using a wide range of style options.</li>
-          <li> Enter your CSS notes here</li>
+          <li> A margin indicates how much space we want around the outside of an element.</li>
+          <li> A padding indicates how much space we want around the content inside an element.</li>
+          <li> I still have much to learn about CSS.</li>
         </ul>
       </section>
 
