added some functions

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li> Enter your JavaScript notes here</li>
-          <li> Enter your JavaScript notes here</li>
-          <li> Enter your JavaScript notes here</li>
-          <li> Enter your JavaScript notes here</li>
+          <li> A variable is a named container that allows us to store data in our code.</li>
+          <li> Control flow is the order in which a computer executes code in a script.</li>
+          <li> Functions are very versatile and can help execute our code.</li>
+          <li> Although I am learning about javascript, I am still confused.</li>
         </ul>
       </section>
     </main>
